flapivor/tests/m3/hopix/typechecker/good/11-function-definition.hopix
def id : Int -> Int (x) = x

val main : Int =
    id (42)