flapivor/tests/m3/hopix/typechecker/bad/20-invalid-function-call-06.hopix
def f : Int -> Int (x) = f("This is wrong!")
